--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,19 +8,18 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
-  "proxy": "http://91.108.122.176:5000",
-
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
